--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
 body {
-    background-image: url(background1.jpg);
+    background-image: url("marble.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
