--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@ body {
     background-repeat: no-repeat;
     background-size: 100%;
 }
+
+.all {
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30rem;
+
+}
