--- a/src/App.css
+++ b/src/App.css
@@ -11,26 +11,43 @@ body {
 }
 
 .all {
+    background: url("roses.jpg");
+    background-size: cover;
     display: flex;
     justify-content: center;
-    padding-top: 5rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    padding-top: 4rem;
+    padding-left: 6rem;
+    padding-right: 6rem;
+    padding-bottom: 4rem;
     margin-left: auto;
     margin-right: auto;
     width: 30rem;
-
 }
 
 .first {
     display: flex;
     justify-content: center;
     margin-left: 50rem;
-    color:	#fba09d;
+    color:		#000292;
     text-shadow: 2px 2px 5px #4e2b29;
-    /* background-color: #f7ccad93; */
-    /* font-family: 'Lobster', cursive; */
     font-family: 'Cinzel', serif;
     font-size: 3rem;
     width: 10rem;
+}
+
+.vert-button--btn {
+    display: block;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: 'Cinzel', serif;
+    font-size: 3rem;
+    color: #000292;
+    height: 6rem;
+    width: 16rem;
+    justify-content: center;
 }
 
 button {
@@ -39,7 +56,7 @@ button {
     margin-left: auto;
     margin-right: auto;
     padding-left: 30rem;
-    background-color: #4CAF50; /* Green */
+    background-color: 	#858585c2;
     border: none;
     color: white;
     padding: 15px 32px;
@@ -55,24 +72,4 @@ button {
 
 button:hover {
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
-}
-
-.oily {
-    margin-left: 15rem;
-}
-
-.combo {
-    margin-left: 15rem;
-}
-
-.dry {
-    margin-left: 15rem;
-}
-
-.next {
-    margin-left: 35.6rem;
-}
-
-.container {
-    padding-left: 40rem;
 }
