--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
 body {
-    /* background-image: url("marble.jpg");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    image-rendering: auto; */
     background: url("marble.jpg") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -17,51 +13,65 @@ body {
     justify-content: center;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
-    padding-top: 4rem;
-    padding-left: 6rem;
-    padding-right: 6rem;
-    padding-bottom: 4rem;
+    padding-top: 6rem;
+    padding-left: 8rem;
+    padding-right: 8rem;
+    padding-bottom: 6rem;
     margin-left: auto;
     margin-right: auto;
-    width: 30rem;
-}
-
-.first {
-    display: flex;
-    justify-content: center;
-    margin-left: 50rem;
-    color:		#000292;
-    text-shadow: 2px 2px 5px #4e2b29;
-    font-family: 'Cinzel', serif;
-    font-size: 3rem;
-    width: 10rem;
+    width: 28rem;
+    border-radius: 4rem;
 }
 
 .vert-button--btn {
     display: block;
     flex-direction: column;
+    margin-top: 2rem;
     margin-left: auto;
     margin-right: auto;
     font-family: 'Cinzel', serif;
-    font-size: 3rem;
-    color: #000292;
+    font-size: 2.7rem;
+    color: #ff5c33;
+    text-shadow: 1px 1px 2px #94321a;
     height: 6rem;
     width: 16rem;
     justify-content: center;
 }
 
+.vert-button--btn1 {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    font-family: 'Pacifico', cursive;  
+    font-size: 3rem;
+    text-shadow: 1px 1px 2px white,  1px 1px 3px #631010, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15);
+    color: #b32400;
+}
+
+.vert-button--btn3 {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    font-family: 'Pacifico', cursive;  
+    font-size: 2.8rem;
+    text-shadow:  0 1px 0 #cccccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbbbbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaaaaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.15);
+    color: #b32400;
+}
+
+
 button {
     display: flex;
     justify-content: center;
+    border-radius: 10px;
+    background-image: url("roses.jpg");
     margin-left: auto;
     margin-right: auto;
     padding-left: 30rem;
-    background-color: 	#858585c2;
     border: none;
-    color: white;
     padding: 15px 32px;
     text-align: center;
-    text-decoration: none;
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
@@ -70,6 +80,17 @@ button {
     transition-duration: 0.4s;
 }
 
+.skinTypeButton {
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1.5rem;
+    color:#ff5c33;
+    font-size: 2rem;
+    font-family: 'Cinzel', serif;
+}
+
 button:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    box-shadow: 1px 2px 4px 0 #dd9482,  0 12px 16px 0  #661400;
 }
